# models/login.go
@@ -1,0 +1,12 @@
+package models
+
+type LoginDto struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type LoginResponseDto struct {
+	Message string     `json:"message"`
+	User    *User      `json:"user"`
+	Token   *AuthToken `json:"token"`
+}
